<!--
  ~
  ~  Copyright 2025 Esri
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">ArFlyoverApp</string>
    <string name="arcore_not_installed_screen_message">Google Play Services for AR must be installed to run this app.</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="privacy_info_not_accepted">Privacy Info not accepted</string>
    <string name="show_privacy_info">Show Privacy Info</string>
    <string name="setting_up_ar">Setting up AR...</string>
    <string name="failed_to_initialize_ar">Failed to initialize: %1$s</string>
    <string name="failed_to_load_scene">Failed to load scene: %1$s</string>
    <string name="more">More</string>
    <string name="select_new_location">Select a new location:</string>
</resources>
