...

    companion object {
        fun Saver(
            groupElement: GroupFormElement,
            fieldStates: FormStateCollection
        ): Saver<BaseGroupState, Boolean> = Saver(
            save = {
                it.expanded.value
            },
            restore = {
                BaseGroupState(
                    label = groupElement.label,
                    description = groupElement.description,
...
