...
    if (fileState.type !is ViewableFileType.Other) {
        Dialog(
            onDismissRequest = onDismissRequest,
            properties = DialogProperties(usePlatformDefaultWidth = false)
        ) {
            Scaffold(
                modifier = Modifier.fillMaxSize().testTag("FileViewer"),
                topBar = {
                    TopAppBar(fileState, scope, onDismissRequest)
                }
            ) {
                FileViewerContent(Modifier.padding(it), fileState)
            }
...
