...
@Composable
internal fun AdvancedOptions(
    @Suppress("unused_parameter") modifier: Modifier = Modifier,
    selectedColor: Color,
    onColorChanged: (Color) -> Unit = {},
) {
    ExpandableCard(
        title = stringResource(id = R.string.advanced_options),
        toggleable = true,
        expandableCardState = rememberExpandableCardState(false),
        padding = PaddingValues()
    ) {
        Column {
...
